--- a/todo/static/css/main.css
+++ b/todo/static/css/main.css
@@ -251,11 +251,11 @@ iframe {
   border-radius: 10px;
   top: 0;
   left: 0;
-  background: #a64bf4;
-  background: -webkit-linear-gradient(45deg, #00dbde, #fc00ff);
-  background: -o-linear-gradient(45deg, #00dbde, #fc00ff);
-  background: -moz-linear-gradient(45deg, #00dbde, #fc00ff);
-  background: linear-gradient(45deg, #00dbde, #fc00ff);
+  background: #10021d;
+  background: -webkit-linear-gradient(45deg, #041e1f, #fc00ff);
+  background: -o-linear-gradient(45deg, #052525, #fc00ff);
+  background: -moz-linear-gradient(45deg, #051111, #fc00ff);
+  background: linear-gradient(45deg, #093233, #fc00ff);
   opacity: 0;
   -webkit-transition: all 0.4s;
   -o-transition: all 0.4s;
