--- a/todo/templates/home.html
+++ b/todo/templates/home.html
@@ -262,7 +262,7 @@
                         </span>
                         <a href="{% url 'social:begin' 'google-oauth2' %}" class="btn-google m-b-20">
                             <img src= "https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png">
-                            Continue with Google
+                            Login with Google
                         </a>
                     </form>
                 </div>
