--- a/todo/templates/home.html
+++ b/todo/templates/home.html
@@ -246,31 +246,36 @@
     </div>
   </div>
         {% else %}
-
-                <head>
-                  <!-- <link rel="stylesheet" media="screen" href="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/demo/css/style.css"> -->
-                  <link rel="stylesheet" href="static/css/login.css">
-                </head>
-          
+        <head>
+        <!-- <link rel="stylesheet" media="screen" href="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/demo/css/style.css"> -->
+        <link rel="stylesheet" href="static/css/login.css">
+        </head>
         <!-- particles.js container -->
-          <div class="limiter">
-            <div class="container-login100">
-                <div class="wrap-login100 p-l-110 p-r-110 p-t-62 p-b-33">
-                    <form class="login100-form validate-form flex-sb flex-w">
-                        <span class="login100-form-title p-b-53">
-                            Welcome to Dash
-                        </span>
-                        <a href="{% url 'social:begin' 'google-oauth2' %}" class="btn-google m-b-20">
-                            <img src= "https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png">
-                            Login with Google
-                        </a>
-                    </form>
-                </div>
-            </div>
+
+          <div class="LoginContainer">
+            <div class="loginInner">
+                <form class="login100-form validate-form flex-sb flex-w">
+                    <span class="login100-form-title p-b-53">
+                      <div id="particles-js"></div>
+
+                          Welcome to Dash
+                      </span>
+                      <a href="{% url 'social:begin' 'google-oauth2' %}" class="btn-google m-b-20">
+                          <img src= "https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png">
+                          Login with Google
+                      </a>
+                  </form>
+              </div>
+          </div>
+      
+
+
+
         </div>
+
         
-        <div id="particles-js">
-        </div>
+        
+        
         
         <!-- scripts -->
         <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
