back buttons and ssl

--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -17,6 +17,7 @@
 	</head>
 	<body>
 		<div class = "container">
+			<a href = "{% url 'gohome3' %}">Back</a>
 		<div class="container-fluid" id="wrapper">
 			{% if user.is_authenticated %}
 			<div class="page-content page-container" id="page-content">
