--- a/calendarMod/templates/calendar/index.html
+++ b/calendarMod/templates/calendar/index.html
@@ -7,9 +7,11 @@
 
 <div class = "container">
 {% if user.is_authenticated %}
-<p>Here are your upcoming events:</p>
+
 
 <div class="container">
+<a href = "{% url 'gohome2' %}">Back</a>
+<p>Here are your upcoming events:</p>
     <div class="row">
 
 
